infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  tls:
    - hosts:
        - longhorn.local.siemons-it.nl
      secretName: local-siemons-it-nl-tls
  rules:
    - host: longhorn.local.siemons-it.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
